{
    "name": "TouchInputControls",
    "maps": [
        {
            "name": "Touch",
            "id": "24feb2ae-dcbd-46ea-a1e9-699abc1aaafc",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Value",
                    "id": "0c817de8-7f48-4a08-80cd-2fb417d68cc9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "9fd0d5e7-a69c-4959-a0d9-eae2899799be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "04a19d46-382c-4732-b7ba-955f1f4d1b80",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a22ea259-9ce6-4165-a933-294ce31f47e9",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd852d40-7621-4170-9201-a64286ec3217",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67c63ea0-6ad7-4160-8e16-44869e7d2f62",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}